apps/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: bazarr
  replicas: 0
  template:
    metadata:
      labels:
        app: bazarr
      annotations:
        backup.velero.io/backup-volumes: config
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
              name: bazarr
          volumeMounts:
            - name: shows
              mountPath: /tv
            - name: movies
              mountPath: /movies
            - name: config
              mountPath: /config
      volumes:
        - name: shows
          hostPath:
            path: /home/padawan/media/shows
            type: Directory
        - name: movies
          hostPath:
            path: /home/padawan/media/movies
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
