apps/media/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
  annotations:
    gethomepage.dev/name: Bazarr
    gethomepage.dev/description: Subtitles management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/pod-selector: "app=bazarr"
spec:
  tls:
    - hosts:
        - bazarr.totorinho.duckdns.org
      secretName: duckdns-wildcard-cert-totorinho.duckdns.org
  rules:
  - host: bazarr.totorinho.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
